--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_core: ^2.25.4
   firebase_auth: ^4.17.4
   firebase_database: ^10.4.5
+  flutter_bloc: ^8.1.4
 
 dev_dependencies:
   flutter_test:
